# LTV-MPC

./: .gitignore  CMakeLists.txt  README.md  doxyconf
include/: mpcController.h  mpcProblem.h  qpSolver.h
lib/qpoases/: VERSIONS
sfunc/: ltvmpc_sfunc.cpp  ltvmpc_sfunc.mexa64  makeSFunction.m  testLtvMpc.slx
src/: CMakeLists.txt  main.cpp  mpcController.cpp  mpcProblem.cpp  qpSolver.cpp
src/Linux/: CMakeLists.txt
test/: CMakeLists.txt  testMpcController.cpp  testMpcProblem.cpp  testQpOasesSolver.cpp
